--- a/.envrc
+++ b/.envrc
@@ -25,15 +25,25 @@
 #   - .env is gitignored (your local configuration)
 # ==============================================================================
 
-# Load base environment file (committed to git)
+# Load .env file if it exists
 if [ -f .env ]; then
     echo "📄 Loading .env (base configuration)"
-    dotenv .env
+    # Use dotenv_if_exists for safer loading
+    dotenv_if_exists .env
 fi
-
 
 # Export important paths
 export PYTHONPATH="${PWD}:${PYTHONPATH}"
+
+# Debug: Show that direnv is working
+echo "✅ direnv loaded successfully"
+echo "   PYTHONPATH: ${PYTHONPATH}"
+if [ -n "$APP_NAME" ]; then
+    echo "   APP_NAME: ${APP_NAME}"
+fi
+if [ -n "$APP_ENV" ]; then
+    echo "   APP_ENV: ${APP_ENV}"
+fi
 
 # Optional: Set default values if not provided
 # export APP_NAME="${APP_NAME:-my-python-app}"
